# adams_vscode

./: .gitignore  .gitmodules  .vscode-test.js  .vscodeignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  _redirects  adams-cmd-lsp-plan.md  adams-view-mcp-server-plan.md  aview.log.bak  index.html  language-configuration.json  macro-hover-plan.md  msc-adams-0.0.1.vsix  package-lock.json  package.json  qa_lint_results.csv  run-tests.js  skills-lock.json  tsconfig.json  vsc-extension-quickstart.md
.github/: copilot-instructions.md
adams-cmd-lsp/: pyproject.toml
adams-cmd-lsp/adams_cmd_lsp/: __init__.py  __main__.py  cli.py  diagnostics.py  linter.py  macros.py  mcp_server.py  object_index.py  parser.py  references.py  rules.py  schema.py  server.py  symbols.py  ude.py
adams-cmd-lsp/adams_cmd_lsp/data/: command_schema.json
adams-cmd-lsp/tests/: __init__.py  test_cli.py  test_completion.py  test_linter.py  test_macro_param_navigation.py  test_macros.py  test_mcp_server.py  test_object_index.py  test_parser.py  test_references.py  test_rules.py  test_schema.py  test_semantic_tokens.py  test_server.py  test_symbols.py  test_ude.py
adams-view-mcp-server/: evaluation.xml  package-lock.json  package.json  tsconfig.json
assets/: SlideWrapper-BRDNEFEZ.css  index-CZG_pl3X.css  index-DD3lO6LH.js  logo-89XlHgJn.js  md-7vfvbZAX.js  md-9fDDocxx.js  md-BBUSkdpB.css  md-BJ8AbaVk.css  md-BJgEBrCV.js  md-BLx4v9Bg.js  md-BNKCZ58O.js  md-BRfoWJtl.js  md-BUnyPXoS.css  md-BVAeSGQe.js  md-Bjv8YJZM.js  md-BlxGUDcx.js  md-BmXRtlAh.js  md-Bo_y_WsL.js  md-Bzich2Yu.js  md-C44m-QuY.js  (+20 more)
(+1946 files in other folders)
